# idearium

./: .env  .env.example  .gitignore  CHANGELOG.md  DESIGN.md  README.md  build.py  config.toml  entries.json  hyperlink-max-ideas.md  manual-de-estilo.md  notes.txt  pyproject.toml  quoteback_cache.json  update.sh
.specs/: 002-selection-search.md  010-image-support.md  DESIGN.md
assets/: library.json  quoteback.js  style.css
microblog/: 20240530T1525.md  20240531T1814.md  20250109T1928.md  20250311T1642.md  20250615T1520.md  20260329T2052.md  20260401T1811.md  20260401T1829.md  20260403T1404.md  20260406T1104.md  20260415T1404.md  20260415T1804.md  20260417T1104.md  20260417T1204.md
notas/: +Digital-Nomad-Solidarity-Network.md  +conocimiento-etnografico-como-abduccion.md  +criticas-a-la-autoadscripcion-y-las-narrativas-de-descendencia-comun.md  +ensayo-sobre-dinamicas-del-dialogo-inter-epistemico.md  +ensayo-sobre-etnografia-e-inteligencia-artificial.md  +ensayo-sobre-la-deshumanizacion.md  +ensayo-sobre-los-valores-epistemicos-de-la-historia.md  +ensayo-sobre-sistemas-sociotecnicos-de-datos-agua-SIUCAM.md  +escribir-es-la-mejor-forma-de-leer.md  +sobre-la-repulsion-y-el-abrazo-a-la-tecnologia.md  +sobre-las-mujeres-que-gritan.md  +sobre-poder,-ego-y-privilegio-en-organizaciones.md  +tecnicas-de-lectura-1-introduccion.md  +tecnicas-de-lectura-1a-introduccion.md  +tecnicas-de-lectura-2-lectura-inspeccional.md  198 Methods of Non-Violent Action.md  21-marzo-2025.docx  @abreu2012.md  @adler1939.md  @adler1997.md  @adler2014.md  @adlerlomnitz1998.md  @aha2023-08-23.md  (+3354 more)
(+74 files in other folders)
